--- a/DatabaseDesigner.Wasm/DatabaseDesigner.Wasm.csproj
+++ b/DatabaseDesigner.Wasm/DatabaseDesigner.Wasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,6 +8,18 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.20451.17" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.20451.17" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="Z.Blazor.Diagrams" Version="0.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Watch Include="**\*.js;**\*.css;**\*.cs;**\*.razor;**\*.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Watch Remove="Components\Diagram\TableColumn.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DatabaseDesigner.Core\DatabaseDesigner.Core.csproj" />
+  </ItemGroup>
 </Project>
