--- a/DatabaseDesigner.Wasm/DatabaseDesigner.Wasm.csproj
+++ b/DatabaseDesigner.Wasm/DatabaseDesigner.Wasm.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.20451.17" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.20451.17" PrivateAssets="all" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.20451.14" />
     <PackageReference Include="Z.Blazor.Diagrams" Version="1.0.4.1" />
   </ItemGroup>
